<resources>
    <string name="app_name">实名登记</string>
    <string name="chekin_value">入 住 登 记</string>
    <string name="logoff_value">离 店 注 销</string>
    <string name="infomanagement_value">信 息 管 理</string>
    <string name="addguest_value">添加/登记房客</string>
    <string name="selectseatcode_value">选择房间号</string>
    <string name="price_value">最终房价:</string>
    <string name="pricehint_value">请输入实收金额</string>
    <string name="personinseat_value">已登记人员↓</string>
    <string name="currentpersoninseat_value">当前在住人员↓</string>
    <string name="logintitle_value">民宿（网吧）实名登记</string>
    <string name="starttime_value">登记起始时间:</string>
    <string name="nounavailableroom_value">当前暂无正在使用的房间</string>

    <string name="pleasesroom_value">请先选择房间号</string>
    <string name="room_value">房间号：</string>
    <string name="regist_title_value">人员入住登记</string>
    <string name="no_regist_value">暂无登记人员</string>
    <string name="zhanyongtishi_value"> 当前房间号已处于使用状态，请选择其他房间，或者在"信息管理"中将此房间订单撤销！</string>
    <string name="setting">设 置</string>

</resources>
