<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/guillotine_background"
        android:orientation="horizontal">

        <com.jinchao.registration.widget.CanaroTextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="当前账号：181****1159"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:layout_gravity="top"
            android:padding="5dp"
            android:layout_margin="30dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"/>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <com.jinchao.registration.widget.CanaroRadioButton
            android:id="@+id/cb_checkin"
            style="@style/side_item_style"
            android:drawableLeft="@drawable/cb_checkin_draw"
            android:layout_marginLeft="30dp"
            android:checked="true"
            android:text="@string/chekin_value"/>
        <com.jinchao.registration.widget.CanaroRadioButton
            android:id="@+id/cb_logoff"
            style="@style/side_item_style"
            android:drawableLeft="@drawable/cb_logoff_draw"
            android:text="@string/logoff_value"/>
        <com.jinchao.registration.widget.CanaroRadioButton
            android:id="@+id/cb_info"
            style="@style/side_item_style"
            android:drawableLeft="@drawable/cb_info_draw"
            android:text="@string/infomanagement_value"/>
        <com.jinchao.registration.widget.CanaroRadioButton
            android:id="@+id/cb_setting"
            style="@style/side_item_style"
            android:drawableLeft="@drawable/cb_setting_draw"
            android:layout_marginTop="30dp"
            android:text="@string/setting"/>
    </RadioGroup>
</LinearLayout>