<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/improtant_people_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/improtant_people_tv_bg"
            android:padding="10dp"
            android:text="@string/room_value"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/icon_down"
            android:gravity="center"
            android:padding="10dp"
            android:text="请选择"
            android:textColor="@color/title2"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_green_click"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/starttime_value"
            />
        <TextView
            android:id="@+id/tv_starttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginLeft="12dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_orderid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="#13227a"
        android:layout_marginLeft="12dp"
        android:drawableLeft="@drawable/icon_orderid"
        android:drawablePadding="10dp"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/tv_already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/title1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textSize="17sp"
        android:text="@string/currentpersoninseat_value"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/white_round_bg"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_above="@+id/ll_price">
            <ListView
                android:id="@+id/lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_nodata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_nodata"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:textColor="@color/title3"
                android:visibility="gone"
                android:text="@string/no_regist_value"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_undo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/title2"
            android:layout_alignParentBottom="true"
            android:padding="15dp"
            android:text="订 单 撤 销"/>
     </RelativeLayout>
</LinearLayout>