<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical" android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/improtant_people_bg"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/improtant_people_tv_bg"
            android:text="@string/room_value"/>
        <TextView
            android:id="@+id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/title2"
            android:gravity="center"
            android:drawableRight="@drawable/icon_down"
            android:text="请选择"/>
    </LinearLayout>
    <Button
        android:id="@+id/addguest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_green_click"
        android:drawableLeft="@drawable/icon_add"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/addguest_value"/>


    <TextView
        android:id="@+id/tv_already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/title1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textSize="17sp"
        android:text="@string/personinseat_value"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_above="@+id/btn_save"
            android:background="@drawable/white_round_bg"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/title2"
            android:layout_alignParentBottom="true"
            android:padding="15dp"
            android:visibility="gone"
            android:text="保  存"/>
    </RelativeLayout>
</LinearLayout>